<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_privacy_policy"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="in.bizzmark.smartpoints_user.PrivacyPolicyActivity">

    <!-- Header aligned to top -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:id="@+id/header"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_arrow_back_white_24dp"
            android:layout_marginLeft="13dp"
            android:id="@+id/privacy_policy__back_arrow"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="13dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Privacy Policy"
            android:textSize="22dp"
            android:textColor="@color/color_white"
            android:layout_centerInParent="true"/>
        -->
    </RelativeLayout>

    <ScrollView
        android:id="@+id/container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/header" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Overview"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:textColor="#4b7ed7"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:id="@+id/textView6" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginLeft="10dp"
                android:text="@string/This_privacy_policy_governs"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#4b7ed7"
                android:textSize="18dp"
                android:text="Collection of Information"
                android:textStyle="bold"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"/>-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text= "@string/smartpoints_collects_both_personal"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="2dp"
                android:id="@+id/textView9" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textSize="18dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="Information Collected at Registration"
                android:textColor="#4b7ed7"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginLeft="10dp"
                android:text="@string/Totakeadvantage"
                android:layout_gravity="left"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="#4b7ed7"
                android:text="Information Collected Post Registration"
                android:layout_gravity="left"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/AutomaticInformation"
                android:layout_gravity="left"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Use and Disclosure of Personal Information"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="#4b7ed7"
                android:layout_marginLeft="10dp"
                android:layout_gravity="left"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/We_do_not_rent"
                android:layout_gravity="left"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Data Security"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_gravity="left"
                android:textColor="#4b7ed7"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/textView7" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="2dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/smartpoints_is_committed"
                android:layout_gravity="left"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Opt-Out policy"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="#4b7ed7"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="left"
                android:layout_marginBottom="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/At_any_time_you_may_unsubscribe"
                android:layout_gravity="left"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Changes to Privacy Policy"
                android:textStyle="bold"
                android:layout_gravity="left"
                android:textColor="#4b7ed7"
                android:textSize="18dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginTop="5dp"
                android:text="@string/This_privacy_policy_may"
                android:layout_gravity="left"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
