<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone">

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/status_bar"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:layout_height="37dp"
        android:layout_marginBottom="3dp"
        android:visibility="gone"
        android:background="@android:color/background_dark">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:textColor="@android:color/white"
            android:id="@+id/status_text">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <Button
                android:id="@+id/btn_connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_drawable"
                android:text="@string/connect_peer_button"
                android:visibility="gone"
                android:textColor="@color/color_white" />


            <Button
                android:id="@+id/btn_disconnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_drawable"
                android:text="@string/disconnect_peer_button"
                android:visibility="gone"
                android:layout_weight="1"
                android:textColor="@color/color_white" />

            <android.support.design.widget.FloatingActionButton
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:id="@+id/fab_send"
                app:backgroundTint="@color/colorPrimary"
                app:elevation="4dp"
                app:borderWidth="0dp"
                android:layout_marginRight="30dp"
                android:layout_marginEnd="30dp"
                app:srcCompat="@drawable/ic_action_send"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/btn_send_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_drawable"
                android:text="@string/resend_button"
                android:textColor="@color/color_white"
                android:visibility="gone" />

        </LinearLayout>

        <TextView
            android:id="@+id/device_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/device_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/group_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/group_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>
    </LinearLayout>
</FrameLayout>
